change email domain type from company to org

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<ul class="info">
 			<li><i class="fa fa-phone-square"></i>711-144-494</li>
 			<li><i class="fa fa-map-marker"></i>22may, Almukalla, Hadramut, Yemen</li>
-			<li><i class="fa fa-envelope"></i><a href="#">info@retaj.org</a></li>
+			<li><i class="fa fa-envelope"></i><a href="#">info@retaj.company</a></li>
 		</ul>
 
 		<div class="social-links">
